--- a/.config
+++ b/.config
@@ -1,1 +1,3 @@
-# This is an empty file, please overwrite it after generating the .config file with the source code
+CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt7621=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_zte_e8820v2=y
