--- a/.config
+++ b/.config
@@ -1,3 +1,27 @@
+# Target Perangkat: ZTE E8820V2
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_zte_e8820v2=y
+
+# Tampilan & Tema (Argon)
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
+
+# Aplikasi LuCI (Aplikasi Umum & Berguna)
+CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-app-wol=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-access-control=y
+CONFIG_PACKAGE_luci-app-nlbwmon=y
+CONFIG_PACKAGE_luci-app-ram-free=y
+
+# Pengaturan Bahasa (Utamakan Inggris agar stabil)
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh-cn=n
+
+# Driver WiFi & USB (Penting untuk E8820V2)
+CONFIG_PACKAGE_kmod-mt7603=y
+CONFIG_PACKAGE_kmod-mt76x2=y
+CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_kmod-usb-storage=y
