--- a/.config
+++ b/.config
@@ -17,3 +17,7 @@ CONFIG_PACKAGE_kmod-mt7603=y
 CONFIG_PACKAGE_kmod-mt76x2=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-usb-storage=y
+
+#driver lan
+CONFIG_PACKAGE_kmod-mt7530=y
+CONFIG_PACKAGE_kmod-mt75xx-gsw=y
