--- a/.config
+++ b/.config
@@ -1,13 +1,25 @@
-# Target Perangkat: ZTE E8820V2
+# Target System
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_zte_e8820v2=y
 
+# Dasar Sistem (LuCI agar bisa diakses via Browser)
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-i18n-base-id=y
 
-# Pengaturan Bahasa (Utamakan Inggris agar stabil)
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh-cn=n
-
+# Driver Switch MediaTek MT7530 (Wajib untuk LAN)
 CONFIG_PACKAGE_kmod-mt7530=y
+CONFIG_PACKAGE_kmod-mt75xx-gsw=y
+
+# Driver WiFi & Firmware (Wajib untuk WiFi)
+CONFIG_PACKAGE_kmod-mt76=y
 CONFIG_PACKAGE_kmod-mt7603=y
 CONFIG_PACKAGE_kmod-mt7612=y
+CONFIG_PACKAGE_mt7603-firmware=y
+CONFIG_PACKAGE_mt7612-firmware=y
+CONFIG_PACKAGE_wpad-basic-wolfssl=y
+
+# Utility Tambahan (Opsional tapi sangat membantu)
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-argon-config=y
